generated/checker-for-evaluation/generated/test-Uninit-Data-d313eb8b77557a6d5855f42d2234bd592c7b50dd/build_logs/9/build_error_log3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In constructor ‘{anonymous}::SAGenTestChecker::SAGenTestChecker()’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:42:71: error: no matching function for call to ‘clang::ento::BugType::BugType(const char [28], const char [17])’
   42 |     : BT(new BugType("Partial Initialization Leak", "Kernel Info-leak")) {}
      |                                                                       ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:7:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:3: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::CheckerBase*, llvm::StringRef, llvm::StringRef, bool)’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:30: note:   no known conversion for argument 1 from ‘const char [28]’ to ‘const clang::ento::CheckerBase*’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |           ~~~~~~~~~~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:3: note: candidate: ‘clang::ento::BugType::BugType(clang::ento::CheckerNameRef, llvm::StringRef, llvm::StringRef, bool)’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:26: note:   no known conversion for argument 1 from ‘const char [28]’ to ‘clang::ento::CheckerNameRef’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |           ~~~~~~~~~~~~~~~^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::BugType&)’
   27 | class BugType {
      |       ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostStmt(const clang::DeclStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:85:31: warning: unused variable ‘Field’ [-Wunused-variable]
   85 |         for (const FieldDecl *Field : RD->fields())
      |                               ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:92:56: error: no matching function for call to ‘clang::DeclarationNameInfo::DeclarationNameInfo(const clang::VarDecl*&, clang::SourceLocation)’
   92 |           DeclarationNameInfo DNI(VD, VD->getLocation());
      |                                                        ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Decl.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:786:3: note: candidate: ‘clang::DeclarationNameInfo::DeclarationNameInfo(clang::DeclarationName, clang::SourceLocation, clang::DeclarationNameLoc)’
  786 |   DeclarationNameInfo(DeclarationName Name, SourceLocation NameLoc,
      |   ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:786:3: note:   candidate expects 3 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:783:3: note: candidate: ‘clang::DeclarationNameInfo::DeclarationNameInfo(clang::DeclarationName, clang::SourceLocation)’
  783 |   DeclarationNameInfo(DeclarationName Name, SourceLocation NameLoc)
      |   ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:783:39: note:   no known conversion for argument 1 from ‘const clang::VarDecl*’ to ‘clang::DeclarationName’
  783 |   DeclarationNameInfo(DeclarationName Name, SourceLocation NameLoc)
      |                       ~~~~~~~~~~~~~~~~^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:781:3: note: candidate: ‘clang::DeclarationNameInfo::DeclarationNameInfo()’
  781 |   DeclarationNameInfo() = default;
      |   ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:781:3: note:   candidate expects 0 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:768:8: note: candidate: ‘constexpr clang::DeclarationNameInfo::DeclarationNameInfo(const clang::DeclarationNameInfo&)’
  768 | struct DeclarationNameInfo {
      |        ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:768:8: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:768:8: note: candidate: ‘constexpr clang::DeclarationNameInfo::DeclarationNameInfo(clang::DeclarationNameInfo&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:768:8: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:96:72: error: no matching function for call to ‘clang::DeclRefExpr::DeclRefExpr(clang::VarDecl*, clang::DeclarationNameInfo&, clang::QualType, clang::ExprValueKind)’
   96 |                                                               VK_LValue);
      |                                                                        ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:2:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1287:3: note: candidate: ‘clang::DeclRefExpr::DeclRefExpr(const clang::ASTContext&, clang::ValueDecl*, bool, clang::QualType, clang::ExprValueKind, clang::SourceLocation, const clang::DeclarationNameLoc&, clang::NonOdrUseReason)’
 1287 |   DeclRefExpr(const ASTContext &Ctx, ValueDecl *D,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1287:3: note:   candidate expects 8 arguments, 4 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1284:12: note: candidate: ‘clang::DeclRefExpr::DeclRefExpr(clang::Stmt::EmptyShell)’
 1284 |   explicit DeclRefExpr(EmptyShell Empty) : Expr(DeclRefExprClass, Empty) {}
      |            ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1284:12: note:   candidate expects 1 argument, 4 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1276:3: note: candidate: ‘clang::DeclRefExpr::DeclRefExpr(const clang::ASTContext&, clang::NestedNameSpecifierLoc, clang::SourceLocation, clang::ValueDecl*, bool, const clang::DeclarationNameInfo&, clang::NamedDecl*, const clang::TemplateArgumentListInfo*, clang::QualType, clang::ExprValueKind, clang::NonOdrUseReason)’
 1276 |   DeclRefExpr(const ASTContext &Ctx, NestedNameSpecifierLoc QualifierLoc,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1276:3: note:   candidate expects 11 arguments, 4 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
